# approximated_personalized_pagerank

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  example.txt
googletest-download/: CMakeLists.txt
googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
header-only/: grank.h  grankMulti.h  mccompletepathv2.h
include/: benchmarkAlgorithm.h  grank.h  grankMulti.h  mccompletepathv2.h  pprInternal.h  pprSingleSource.h
include/internal/: kendall.h  pprInternal.h  pprSingleSource.h
src/: main.cc
test/: benchmarkAlgorithmTest.cc  grankHeaderOnlyTest.cc  grankMultiThreadTest.cc  grankTest.cc  mccompletepathv2HeaderOnlyTest.cc  mccompletepathv2Test.cc
test/internal/: findPartitionsTest.cc  jaccardTest.cc  keepTopTest.cc  norm1Test.cc  pprSingleSourceTest.cc
